deprecated/compiler/tests/compile_pass/region_dereference_field_nested.lg
/* Copyright 2014 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

struct bar
{
  x: int,
  y: int,
}

struct foo
{
  a: bar,
  b: bar,
}

task read_write(r: region<foo>, p: foo@r): int
  , reads(r.{a.y, b}), writes(r.b.y)
{
  let i: int = (*p).b.x;
  p->b.y = p->a.y + i + 1;
  return i;
}

task read_only(r: region<foo>, p: foo@r): int
  , reads(r.a.{x, y})
{
  let i: int = (*p).a.y;
  return p->a.x + i + 1;
}

task write_only(r: region<foo>, p: foo@r)
  , writes(r.{a, b})
{
  (*p).a.y = 1;
  p->b.x = 2;
}

task main() {}
